--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -92,7 +92,7 @@
         <div class="col-sm-12">
           <div class="box-shadow-full">
             <div class="row">
-              <div class="col-md-6">
+              <!-- <div class="col-md-6">
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
@@ -130,6 +130,43 @@
                     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
+                </div>
+              </div> -->
+              <div class="col-md-6" >
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="margin-top: 10px; ">
+                  <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block w-100" src="img/work-2.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/work-1.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/work-3.jpg" alt="Third slide">
+                    </div>
+            
+                  </div>
+                  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                  </div>
+                  <div class="col-sm-6 col-md-7" style="padding-top: 20px;">
+                    <div class="about-info">
+                      <p><span class="title-s">Instagram: </span> <span>@__902hua__</span></p>
+                      <!-- <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
+                      <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
+                      <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p> -->
+                    </div>
                 </div>
               </div>
               <div class="col-md-6">
