--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -141,13 +141,13 @@
                   </ol>
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="img/work-2.jpg" alt="First slide">
+                      <img class="d-block w-100" src="img/about-1.JPG" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="img/work-1.jpg" alt="Second slide">
+                      <img class="d-block w-100" src="img/about-2.JPG" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                      <img class="d-block w-100" src="img/work-3.jpg" alt="Third slide">
+                      <img class="d-block w-100" src="img/about-3.JPG" alt="Third slide">
                     </div>
             
                   </div>
@@ -163,9 +163,7 @@
                   <div class="col-sm-6 col-md-7" style="padding-top: 20px;">
                     <div class="about-info">
                       <p><span class="title-s">Instagram: </span> <span>@__902hua__</span></p>
-                      <!-- <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                      <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p> -->
+                      <p><span class="title-s">Email: </span> <span>jjjskyyy0831@gmail.com</span></p>
                     </div>
                 </div>
               </div>
@@ -173,24 +171,23 @@
                 <div class="about-me pt-4 pt-md-0">
                   <div class="title-box-2">
                     <h5 class="title-left">
-                      About me
+                      關於我們
                     </h5>
                   </div>
                   <p class="lead">
-                    Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                    imperdiet et, porttitor
-                    at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                    porttitor accumsan tincidunt.
+                    熱愛美食、旅遊、攝影。
                   </p>
                   <p class="lead">
-                    Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                    porttitor volutpat. Vestibulum
-                    ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                    喜歡把去過的地點，吃過的美食紀錄下來。
                   </p>
                   <p class="lead">
-                    Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                    Nulla porttitor accumsan
-                    tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                    902HUA的由來很簡單，就是我們的車牌號碼。
+                  </p>
+                  <p class="lead">  
+                    會以他命名是因為我們第一次去的旅程（埔里->台南）就是開它南下。
+                  </p>
+                  <p class="lead">
+                    整個路程、回憶， 都與我們同在。
                   </p>
                 </div>
               </div>
@@ -201,7 +198,7 @@
     </div>
   </section>
 
-  <!--/ Section Services Star /-->
+  <!-- / Section Services Star /-->
   <section id="service" class="services-mf route">
     <div class="container">
       <div class="row">
@@ -311,7 +308,7 @@
       </div>
     </div>
   </section>
-  <!--/ Section Services End /-->
+  <!--/ Section Services End / -->
 
   <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
     <div class="overlay-mf"></div>
