--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -133,7 +133,7 @@
                 </div>
               </div> -->
               <div class="col-md-6" >
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="margin-top: 10px; ">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="margin-top: 10px; " data-interval="1500">
                   <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
