--- a/DevFolio/blog-single.html
+++ b/DevFolio/blog-single.html
@@ -36,7 +36,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">BlasterUp</a>
+      <a class="navbar-brand js-scroll" href="index.html">902HUA</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -49,19 +49,19 @@
             <a class="nav-link js-scroll" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#">About</a>
+            <a class="nav-link js-scroll" href="index.html#about">About</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll" href="#">Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#">Work</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#">Contact</a>
+            <a class="nav-link js-scroll" href="index.html#contact">Contact</a>
           </li>
         </ul>
       </div>
