change overlay-bg and annotate breadcrumb

--- a/DevFolio/blog-single.html
+++ b/DevFolio/blog-single.html
@@ -76,7 +76,7 @@
       <div class="table-cell">
         <div class="container">
           <h2 class="intro-title mb-4">Blog Details</h2>
-          <ol class="breadcrumb d-flex justify-content-center">
+          <!-- <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
               <a href="#">Home</a>
             </li>
@@ -84,7 +84,7 @@
               <a href="#">Library</a>
             </li>
             <li class="breadcrumb-item active">Data</li>
-          </ol>
+          </ol> -->
         </div>
       </div>
     </div>
