create travel article

--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -585,7 +585,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
           <div class="card card-blog">
             <div class="card-img">
               <a href="blog-single.html"><img src="img/bukaohai_1.JPG" alt="" class="img-fluid"></a>
@@ -598,7 +598,7 @@
               </div>
               <h3 class="card-title"><a href="blog-single.html">美食篇</a></h3>
               <p class="card-description">
-               一起吃遍台灣所有美食
+               吃遍台灣所有美食
               </p>
             </div>
             <div class="card-footer">
@@ -615,22 +615,20 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
           <div class="card card-blog">
             <div class="card-img">
-              <a href="blog-single.html"><img src="img/post-2.jpg" alt="" class="img-fluid"></a>
+              <a href="blog-travel.html"><img src="img/post-2.jpg" alt="" class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
                 <div class="card-category">
-                  <h6 class="category">Web Design</h6>
+                  <h6 class="category">Travel</h6>
                 </div>
               </div>
-              <h3 class="card-title"><a href="blog-single.html">See more ideas about Travel</a></h3>
+              <h3 class="card-title"><a href="blog-travel.html">旅遊篇</a></h3>
               <p class="card-description">
-                Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis
-                a pellentesque nec,
-                egestas non nisi.
+                走遍台灣各地
               </p>
             </div>
             <div class="card-footer">
@@ -646,7 +644,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="card card-blog">
             <div class="card-img">
               <a href="blog-single.html"><img src="img/post-3.jpg" alt="" class="img-fluid"></a>
@@ -676,7 +674,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
