--- a/DevFolio/blog-travel.html
+++ b/DevFolio/blog-travel.html
@@ -76,15 +76,17 @@
       <div class="table-cell">
         <div class="container">
           <h2 class="intro-title mb-4">Blog Details</h2>
-          <!-- <ol class="breadcrumb d-flex justify-content-center">
+          <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
-              <a href="#">Home</a>
+              <a href="index.html#blog">Home</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="#">Library</a>
+              <a href="blog-single.html">Food</a>
             </li>
-            <li class="breadcrumb-item active">Data</li>
-          </ol> -->
+            <li class="breadcrumb-item active">
+              <a href="#">Travel</a>
+            </li>
+          </ol>
         </div>
       </div>
     </div>
