add travel section in index

--- a/DevFolio/blog-single.html
+++ b/DevFolio/blog-single.html
@@ -314,24 +314,12 @@
             <div class="sidebar-content">
               <ul class="list-sidebar">
                 <li>
-                  <a href="#">Atque placeat maiores.</a>
-                </li>
-                <li>
-                  <a href="#">Lorem ipsum dolor sit amet consectetur</a>
-                </li>
-                <li>
-                  <a href="#">Nam quo autem exercitationem.</a>
-                </li>
-                <li>
-                  <a href="#">Atque placeat maiores nam quo autem</a>
-                </li>
-                <li>
-                  <a href="#">Nam quo autem exercitationem.</a>
+                  <a href="blog-travel.html">台南二寮觀日亭</a>
                 </li>
               </ul>
             </div>
           </div>
-          <div class="widget-sidebar">
+          <!-- <div class="widget-sidebar">
             <h5 class="sidebar-title">Archives</h5>
             <div class="sidebar-content">
               <ul class="list-sidebar">
@@ -352,8 +340,8 @@
                 </li>
               </ul>
             </div>
-          </div>
-          <div class="widget-sidebar widget-tags">
+          </div> -->
+          <!-- <div class="widget-sidebar widget-tags">
             <h5 class="sidebar-title">Tags</h5>
             <div class="sidebar-content">
               <ul>
@@ -377,7 +365,7 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
