--- a/DevFolio/blog-travel.html
+++ b/DevFolio/blog-travel.html
@@ -269,9 +269,9 @@
             <div class="sidebar-content">
               <ul class="list-sidebar">
                 <li>
-                  <a href="#">Atque placeat maiores.</a>
+                  <a href="blog-single.html">不靠海</a>
                 </li>
-                <li>
+                <!-- <li>
                   <a href="#">Lorem ipsum dolor sit amet consectetur</a>
                 </li>
                 <li>
@@ -282,11 +282,11 @@
                 </li>
                 <li>
                   <a href="#">Nam quo autem exercitationem.</a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
-          <div class="widget-sidebar">
+          <!-- <div class="widget-sidebar">
             <h5 class="sidebar-title">Archives</h5>
             <div class="sidebar-content">
               <ul class="list-sidebar">
@@ -307,8 +307,8 @@
                 </li>
               </ul>
             </div>
-          </div>
-          <div class="widget-sidebar widget-tags">
+          </div> -->
+          <!-- <div class="widget-sidebar widget-tags">
             <h5 class="sidebar-title">Tags</h5>
             <div class="sidebar-content">
               <ul>
@@ -332,7 +332,7 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
